hidden sigsev in ph2

--- a/dham/makefile
+++ b/dham/makefile
@@ -1,5 +1,5 @@
 CXX = g++
-FLAGS = -Wall -std=c++17 
+FLAGS = -Wall -std=c++17 -g
 
 main: main.cpp dham.h
 	$(CXX) $(FLAGS) main.cpp dham.h -o main 
